+ : new feature
- : deprecated feature
* : bugfix or changed code
Bug numbers are references to bugs in http://www.achievo.org/bugzilla
[names] are references to people in the AUTHORS file.

Changed in ATK 6.1
------------------
+ Added action caching support to atkFrontController. [Peter]
* atkTmpFile now is able to recursively create the directory structure for
  the temporary file if the directory doesn't already exist. [Peter]
* Fixed debug output in atkTestReporter. [Patrick]
* Fixed non-object error in atkTextAttribute. [Patrick]


Changed in ATK 6.0
------------------
+ Added a method to enable/disable the halt_on_error method so database
  errors can also handled by a custom errorhandler. [Wim,Martin]
+ Added atkFrontController and atkDataHolder. [Peter,Martin,Boy,Tjeerd]
+ Added wizard functionality. A wizard can be constructed containing atkNode
  classes. Class atkWizard supports all atkActions but it is mainly tested
  for add, edit and admin actions. [Maurice]
+ Added class atkController which controls which page to load and the sending
  of post and get vars. Several methods from atkNode have been moved to this
  class. Most importantly, methods for dispatching, page rendering and url
  creating are moved. [Maurice, Lineke]
+ Added getPostVar function which simply returns the _REQUEST params array
  or a specific param when a key is given as parameter. [Maurice]
+ Added atkWizardController class which is responsable for typical
  control actions for nodes being used with atkWizard. [Maurice]
+ Added member var m_renderBoxVars to atkActionHandler which is an array
+ Added 'get' functions to atkPage for javascript and stylesheets. [Maurice]
+ Implemented reuse of handlers in atknode::getHandler method, which is also
  necessary when you want to save member vars before you use them at a later
  time in your pageload. [Maurice]
+ Added style class for atkShuttleRelation. [Angelo]
+ Added atkCaptchaAttribute for use with e.g guestbooks to prevent